[gd_scene load_steps=8 format=2]

[ext_resource path="res://source/mini_games/hoax/assets/hoax_bg.png" type="Texture" id=1]
[ext_resource path="res://source/mini_games/hoax/OptionButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/mini_games/hoax/assets/circle_soft_large.png" type="Texture" id=3]
[ext_resource path="res://source/ui/DefaultTheme.theme" type="Theme" id=4]
[ext_resource path="res://assets/fonts/bahnschrift.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://source/mini_games/hoax/Main.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 46
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 6 )
json_path = "res://assets/hoax_questions.json"

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="TextureRect"]
margin_left = 581.0
margin_top = 90.0
margin_right = 923.0
margin_bottom = 509.0
texture = ExtResource( 3 )
stretch_mode = 1

[node name="TextureRect3" type="TextureRect" parent="TextureRect"]
margin_left = 683.0
margin_top = 96.0
margin_right = 966.0
margin_bottom = 333.0
texture = ExtResource( 3 )
stretch_mode = 1

[node name="TextureRect4" type="TextureRect" parent="TextureRect"]
margin_left = 675.0
margin_top = 206.0
margin_right = 958.0
margin_bottom = 472.0
texture = ExtResource( 3 )
stretch_mode = 1

[node name="TextureRect5" type="TextureRect" parent="TextureRect"]
margin_left = 753.0
margin_top = 300.0
margin_right = 951.0
margin_bottom = 498.0
texture = ExtResource( 3 )
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 125
custom_constants/margin_left = 100
custom_constants/margin_bottom = 275

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 100.0
margin_top = 125.0
margin_right = 924.0
margin_bottom = 493.0
custom_constants/separation = 100

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
margin_top = 135.0
margin_right = 362.0
margin_bottom = 232.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Question?dsafsdfsdfgsdf"
align = 1
valign = 1
autowrap = true

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 462.0
margin_right = 824.0
margin_bottom = 368.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="OptionA" parent="MarginContainer/HBoxContainer/Buttons" instance=ExtResource( 2 )]
margin_right = 362.0
margin_bottom = 77.0
option_text = "option a"

[node name="OptionB" parent="MarginContainer/HBoxContainer/Buttons" instance=ExtResource( 2 )]
margin_top = 97.0
margin_right = 362.0
margin_bottom = 174.0
option_label = "B"
option_text = "option b"

[node name="OptionC" parent="MarginContainer/HBoxContainer/Buttons" instance=ExtResource( 2 )]
margin_top = 194.0
margin_right = 362.0
margin_bottom = 271.0
option_label = "C"
option_text = "option c"

[node name="OptionD" parent="MarginContainer/HBoxContainer/Buttons" instance=ExtResource( 2 )]
margin_top = 291.0
margin_right = 362.0
margin_bottom = 368.0
option_label = "D"
option_text = "option d"

[connection signal="pressed" from="MarginContainer/HBoxContainer/Buttons/OptionA" to="." method="_on_OptionA_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Buttons/OptionB" to="." method="_on_OptionB_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Buttons/OptionC" to="." method="_on_OptionC_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Buttons/OptionD" to="." method="_on_OptionD_pressed"]
